--- a/index.html
+++ b/index.html
@@ -148,6 +148,15 @@
                               height="360" src="assets/visual/dehaze_grass.gif"></td>
                 </tr>
 
+                <tr>
+                  <td width="150" valign="middle" halign="middle" align="left"
+                      style="font-size:20px; padding-top:40px"> Apply inpainting algorithms to recover the missing video. </td>
+                  <td align="left" style="padding-left: 0px;"><img class="center" width="480" height="360"
+                          src="assets/visual/girl_mask.gif"></td>
+                  <td align="left" style="padding-left: 0px;"><img class="center" width="480" height="360"
+                          src="assets/visual/girl_inpaint.gif"></td>
+              </tr>
+
 
                 <tr>
                     <td width="150" valign="middle" halign="middle" align="left"
