--- a/index.html
+++ b/index.html
@@ -126,7 +126,18 @@
                 <td align="left" style="padding-left: 0px;"><img class="center" width="480" height="360"
                           src="assets/visual/Oil_painting.gif"></td>
             </tr>
-    
+  
+
+            <tr>
+              <td width="150" valign="middle" halign="middle" align="left"
+                  style="font-size:20px; padding-top:100px"> Edit the video to reflect the style of the target image. </td>
+              <td align="left" style="padding-left: 0px;"><img class="center" width="480" height="360"
+                      src="assets/visual/style1.gif"></td>
+              <td align="left" style="padding-left: 0px;"><img class="center" width="480" height="360"
+                        src="assets/visual/style2.gif"></td>
+            </tr>
+
+
 
 
                 <tr>
@@ -138,6 +149,14 @@
                             src="assets/visual/bike_mask.gif"></td>
               </tr>
 
+              <tr>
+                <td width="150" valign="middle" halign="middle" align="left"
+                    style="font-size:20px; padding-top:40px"> Introduce a range of colors to the gray video. </td>
+                <td align="left" style="padding-left: 0px;"><img class="center" width="480" height="360"
+                        src="assets/visual/dog_gray.gif"></td>
+                <td align="left" style="padding-left: 0px;"><img class="center" width="480" height="360"
+                        src="assets/visual/dog.gif"></td>
+            </tr>
 
                 <tr>
                     <td width="150" valign="middle" halign="middle" align="left"
@@ -169,12 +188,21 @@
 
                 <tr>
                   <td width="150" valign="middle" halign="middle" align="left"
-                      style="font-size:20px; padding-top:20px"> Apply Red to the pixels of the boy riding the bicycle while maintaining the current state of other pixels. </td>
+                      style="font-size:20px; padding-top:20px"> Mark the pixels of<span style="color: red;"> the girl riding the horse</span> in <span style="color: red;">Red</span> and leave the rest unchanged. </td>
                   <td align="left" style="padding-left: 0px;"><img class="center" width="480" height="360"
-                          src="assets/visual/ori_boy.gif"></td>
+                          src="assets/visual/horsejump-high.gif"></td>
                   <td align="left" style="padding-left: 0px;"><img class="center" width="480" height="360"
-                            src="assets/visual/mask_boy.gif"></td>
+                            src="assets/visual/the girl riding the horse.gif"></td>
               </tr>
+
+              <tr>
+                <td width="150" valign="middle" halign="middle" align="left"
+                    style="font-size:20px; padding-top:20px"> For the the <span style="color: green;">horse doing high jumps</span>, set its pixels to <span style="color: green;">Green</span>  and let the others remain the same </td>
+                <td align="left" style="padding-left: 0px;"><img class="center" width="480" height="360"
+                        src="assets/visual/horsejump-high.gif"></td>
+                <td align="left" style="padding-left: 0px;"><img class="center" width="480" height="360"
+                          src="assets/visual/the horse doing high jumps.gif"></td>
+            </tr>
 
               <tr>
                 <td width="150" valign="middle" halign="middle" align="left"
@@ -184,6 +212,15 @@
                 <td align="left" style="padding-left: 0px;"><img class="center" width="480" height="360"
                           src="assets/visual/deblur.gif"></td>
             </tr>
+
+            <tr>
+              <td width="150" valign="middle" halign="middle" align="left"
+                  style="font-size:20px; padding-top:40px"> Convert the grayscale clip into a colorful masterpiece. </td>
+              <td align="left" style="padding-left: 0px;"><img class="center" width="480" height="360"
+                      src="assets/visual/motorbike_gray.gif"></td>
+              <td align="left" style="padding-left: 0px;"><img class="center" width="480" height="360"
+                      src="assets/visual/motorbike.gif"></td>
+          </tr>
              
             </table>
         </center>
