--- a/index.html
+++ b/index.html
@@ -117,14 +117,25 @@
                   <td align="left" style="padding-left: 0px;"><img class="center" width="480" height="360"
                             src="assets/visual/sketch_style.gif"></td>
               </tr>
+
+              <tr>
+                <td width="150" valign="middle" halign="middle" align="left"
+                    style="font-size:20px; padding-top:100px"> Transform the video to Animate/ Oil Painting Style. </td>
+                <td align="left" style="padding-left: 0px;"><img class="center" width="480" height="360"
+                        src="assets/visual/ Animate style.gif"></td>
+                <td align="left" style="padding-left: 0px;"><img class="center" width="480" height="360"
+                          src="assets/visual/Oil_painting.gif"></td>
+            </tr>
+  
+
     
               <tr>
                 <td width="150" valign="middle" halign="middle" align="left"
-                    style="font-size:20px; padding-top:100px"> Turn the video to WaterColor/ Oil Painting Style. </td>
+                    style="font-size:20px; padding-top:100px"> Turn the video to WaterColor/ 3D Style. </td>
                 <td align="left" style="padding-left: 0px;"><img class="center" width="480" height="360"
                         src="assets/visual/watercolor.gif"></td>
                 <td align="left" style="padding-left: 0px;"><img class="center" width="480" height="360"
-                          src="assets/visual/Oil_painting.gif"></td>
+                          src="assets/visual/3D style.gif"></td>
             </tr>
   
 
